--- a/src/style.css
+++ b/src/style.css
@@ -60,7 +60,7 @@ nav {
 }
 
 .landing_page {
-  background-image: url("/Landing_Image.png");
+  background-image: url("/Landing_Image.webp");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -229,6 +229,10 @@ nav {
 }
 
 @media only screen and (max-width: 800px) {
+  .header{
+    margin-top: 1.5em;
+  }
+
   nav {
     background-color: transparent;
     backdrop-filter: blur(0);
