--- a/src/style.css
+++ b/src/style.css
@@ -230,6 +230,13 @@ nav {
 
 @media only screen and (max-width: 800px) {
   .header{
+    margin-top: 0;
+    padding: 0;
+    z-index: 9;
+  }
+
+  .burger,
+  .logo{
     margin-top: 1.5em;
   }
 
@@ -238,6 +245,7 @@ nav {
     backdrop-filter: blur(0);
     box-shadow: none;
     padding: 0;
+    margin: 0;
   }
 
   .burger {
@@ -311,6 +319,7 @@ nav {
 
   .landing_page{
     background-position: 65% 10%;
+    height: 70vh;
   }
 }
 
